--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -13,6 +13,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    - name: Install SFML
+      run: |
+        sudo apt update
+        sudo apt install libsfml-dev
     - name: make1
       run: make compile
     - name: make2
